# livex-ai-challenge

./: LiveX AI Challenge.md  README.md  calcom.py  chainlit_app.py  main.py  pyproject.toml  test.ipynb
